--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -10,6 +10,7 @@ $font-family-base: "Poppins";
 $headings-font-weight: 700;
 $primary: #3dc961;
 $secondary: #2F4674;
+$border-radius: 1rem;
 
 // include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "../../vendor/twbs/bootstrap/scss/variables";
@@ -37,19 +38,63 @@ $btn-padding-x: $spacer * 1.5;
 @import "../../vendor/twbs/bootstrap/scss/buttons";
 @import "../../vendor/twbs/bootstrap/scss/dropdown";
 @import "../../vendor/twbs/bootstrap/scss/carousel";
+@import "../../vendor/twbs/bootstrap/scss/badge";
+@import "../../vendor/twbs/bootstrap/scss/forms/form-control";
+@import "../../vendor/twbs/bootstrap/scss/forms/input-group";
 
 // optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../vendor/twbs/bootstrap/scss/utilities/api";
 
 // add additional custom code here
 header {
-    @extend .position-fixed, .top-0, .start-0, .end-0;
+    @extend .position-fixed,
+    .top-0,
+    .start-0,
+    .end-0;
     z-index: 9999;
 }
 
-.navbar-brand {
-    .logo {
-        max-width: 150px;
+.form-control,
+.navbar-toggler {
+    &:hover,
+    &:active,
+    &:focus,
+    &:focus-within {
+        box-shadow: none;
+    }
+}
+
+.navbar {
+    .navbar-brand {
+        .logo {
+            width: auto;
+            height: 24px;
+        }
+    }
+
+    .dropdown {
+        .dropdown-menu {
+            width: calc(100vw - 70px);
+            max-width: 320px;
+
+            @include media-breakpoint-down(sm) {
+                width: calc(100vw - 32px);
+                margin-right: -38px;
+            }
+        }
+    }
+}
+
+.carousel {
+    .carousel-indicators{
+        [data-bs-target] {
+            @extend .bg-primary,
+            .bg-opacity-50;
+
+            &.active {
+                @extend .bg-opacity-100;
+            }
+        }
     }
 }
 
@@ -68,7 +113,15 @@ header {
         background-repeat: no-repeat;
 
         &::after {
-            @extend .position-absolute, .d-block, .top-0, .start-0, .end-0, .bottom-0, .z-1, .opacity-50, .bg-white;
+            @extend .position-absolute,
+            .d-block,
+            .top-0,
+            .start-0,
+            .end-0,
+            .bottom-0,
+            .z-1,
+            .opacity-50,
+            .bg-white;
             content: "";
         }
     }
