--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -44,6 +44,7 @@ $btn-border-radius-lg: $border-radius;
 @import "../../vendor/twbs/bootstrap/scss/badge";
 @import "../../vendor/twbs/bootstrap/scss/forms/form-control";
 @import "../../vendor/twbs/bootstrap/scss/forms/input-group";
+@import "../../vendor/twbs/bootstrap/scss/forms/form-check";
 
 // optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../vendor/twbs/bootstrap/scss/utilities/api";
@@ -69,47 +70,9 @@ section {
     @extend .mb-5;
 }
 
-.form-control,
-.navbar-toggler {
-    &:hover,
-    &:active,
-    &:focus,
-    &:focus-within {
-        box-shadow: none;
-    }
-}
-
-.navbar {
-    .navbar-brand {
-        .logo {
-            width: auto;
-            height: 24px;
-        }
-    }
-
-    .dropdown {
-        .dropdown-menu {
-            width: calc(100vw - 70px);
-            max-width: 320px;
-
-            @include media-breakpoint-down(sm) {
-                width: calc(100vw - 32px);
-                margin-right: -38px;
-            }
-        }
-    }
-}
-
-.carousel {
-    .carousel-indicators{
-        [data-bs-target] {
-            @extend .bg-primary,
-            .bg-opacity-50;
-
-            &.active {
-                @extend .bg-opacity-100;
-            }
-        }
+.btn {
+    &.btn-primary {
+        @extend .text-white;
     }
 }
 
@@ -138,10 +101,77 @@ section {
     }
 }
 
-#navbar-menu {
-    .nav-link {
-        &.active {
-            color: $secondary;
+.shadow-primary {
+    box-shadow: 0 1rem 3rem rgba($primary, .175) !important;
+}
+
+.form-control,
+.navbar-toggler {
+    &:hover,
+    &:active,
+    &:focus,
+    &:focus-within {
+        box-shadow: none;
+    }
+}
+
+.navbar {
+    .navbar-brand {
+        .logo {
+            width: auto;
+            height: 24px;
+        }
+    }
+
+    .dropdown {
+        .dropdown-menu {
+            @extend .border-0;
+            width: calc(100vw - 70px);
+            max-width: 320px;
+
+            &:hover,
+            &:active,
+            &:focus,
+            &:focus-within {
+                @extend .shadow-primary;
+            }
+
+            i {
+                @extend .text-muted;
+
+                &:hover,
+                &:active,
+                &:focus,
+                &:focus-within {
+                    @extend .text-primary;
+                }
+            }
+
+            @include media-breakpoint-down(sm) {
+                width: calc(100vw - 32px);
+                margin-right: -38px;
+            }
+        }
+    }
+
+    .navbar-collapse {
+        .nav-link {
+            &.active {
+                color: $secondary;
+            }
+        }
+    }
+}
+
+.carousel {
+    .carousel-indicators{
+        [data-bs-target] {
+            @extend .bg-primary,
+            .bg-opacity-50;
+
+            &.active {
+                @extend .bg-opacity-100;
+            }
         }
     }
 }
@@ -245,6 +275,26 @@ section {
             @extend .bg-transparent,
             .text-secondary;
             transition: all 0.5s ease-in-out;
+        }
+    }
+}
+
+#search-bar {
+    .input-group {
+        &:hover,
+        &:active,
+        &:focus,
+        &:focus-within {
+            @extend .border-primary,
+            .border-opacity-25;
+
+            i {
+                @extend .text-primary;
+            }
+        }
+
+        i {
+            @extend .text-muted;
         }
     }
 }
