--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -50,6 +50,7 @@ $btn-border-radius-lg: $border-radius;
 @import "../../vendor/twbs/bootstrap/scss/forms/form-check";
 @import "../../vendor/twbs/bootstrap/scss/forms/validation";
 @import "../../vendor/twbs/bootstrap/scss/accordion";
+@import "../../vendor/twbs/bootstrap/scss/tables";
 
 // optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../vendor/twbs/bootstrap/scss/utilities/api";
@@ -374,8 +375,28 @@ section {
 }
 
 #about {
-    img {
-        aspect-ratio: 1 / 1;
-        object-fit: contain;
+    #collections-carousel {
+        img {
+            aspect-ratio: 1 / 1;
+            object-fit: contain;
+        }
+    }
+
+    .table {
+        tr {
+            &:first-child {
+                th,
+                td {
+                    @extend .pt-0;
+                }
+            }
+
+            &:last-child {
+                th,
+                td {
+                    @extend .pb-0;
+                }
+            }
+        }
     }
 }
